# Simple-Graphics-Engine

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  gengine.c  gengine.h  graphics.c  graphics.h  lua_glue.c  lua_glue.h  pane.c  pane.h  scripting.c  scripting.h  window.c  window.h
scripts/: fun.lua  hypnotoad.lua  repl.lua
src/: CMakeLists.txt  main.c
